Added redis configurations and able to cache the token

--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=upstock-client-lib
 server.port = 8085
 spring.profiles.active= dev
 
-#logging.level.root= DEBUG
+logging.level.root= DEBUG
 
 logging.level.org.springframework=DEBUG
 com.upstock.client=DEBUG
